syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse) {}
  rpc GetUser (UserRequest) returns (UserResponse) {}
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string userId = 2;
  string role = 3;
  string error = 4;
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  bool isActive = 5;
  string error = 6;
}
